src/objects/PRM_Community_List_View_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>PRM-635 : Add PRM Case Lists which are Visible on Portal</description>
    <fields>
        <fullName>Portal_Case_Type__c</fullName>
        <label>Portal Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>en__c</fullName>
        <label>en</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>order__c</fullName>
        <label>order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PRM Community List View Config</label>
</CustomObject>